@@ -276,8 +276,11 @@ GSM is a standard used for telephone sound compression in
 European countries and it's gaining popularity because of its
 quality.  It usually is CPU intensive to work with GSM audio data.
 .TP 10
-\fB-b/-w/-3/-l/-d\fR
-The sample data size is in bytes, 16-bit words, 3-byte (24-bit) words, 32-bit long words, 
+\fB-1/-2/-3/-4\fR
+The sample data size is 1, 2, 3, or 4 bytes.
+.TP 10
+\fB-b/-w/-l/-d\fR
+The sample data size is in bytes, 16-bit words, 32-bit long words, 
 or 64-bit double long (long long) words.
 .SH FILE TYPES
 .I SoX
